# audio-plugin-coder

./: CMakeLists.txt  build_errors.txt
.agent/rules/: agent.md
.agent/skills/openrouter/: SKILL.md
.github/workflows/: build-newmood.yml  build-release.yml
common/: VisageJuceHost.h
plugins/CloudWash/: status.json
plugins/MoodsCopyTest/: CMakeLists.txt  LICENSE.txt  status.json
plugins/MoodsCopyTest/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/MoodsCopyTest/Design/: v1-style-guide.md  v1-ui-spec.md
plugins/MoodsCopyTest/Documentation/: USER_MANUAL.md
plugins/MoodsCopyTest/Source/: LooperDSP.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VisageControls.h  WetDSP.h
plugins/NewMood/: CMakeLists.txt  README.md  status.json
plugins/NewMood/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/NewMood/Design/: v1-style-guide.md  v1-ui-spec.md
plugins/NewMood/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VisageControls.h
plugins/NewMood/Source/ui/public/: index.html
plugins/NewMood/Source/ui/public/js/: index.js
plugins/gnarly2/: status.json
plugins/gnarly3/: status.json
plugins/nf_gnarly/: status.json
scripts/: build-and-install.ps1  preview-design.ps1
templates/: status-template.json
